Board: R2IL handshake outcomes + the Valhalla-premise storno (operator-caught)
The R2IL session answered all five cross-session questions; outcomes and
ownership recorded (mirror sync now owned here; consumers/ghidra is the
expected end-state, gated on PR2's layout doc + PR3's classids). The
entry's core is a storno of my own handoff premise: 'Valhalla was a
laboratory phase, not a door' was right about addressability and wrong
about integration -- the shipping descriptor vocabulary is value-record-
ready by design (one word per type) and the A/B ran on a real EA build
with measured numbers. The ruling (0xC0 = Panama alone) survives on the
corrected premise: Valhalla is a designed PROPERTY of the C0 concepts,
and properties of concepts do not get domains. OGAR PR #277 (merged)
carries the canonical corrected text.